# ether-media-server

./: .gitignore  CMakeLists.txt  TODO.md  config.json  in.txt  library.db  library.db-shm  library.db-wal  library.sqbpro  main.cc
MetaDataAPI/TMDB/: BaseAPI.cc  BaseAPI.hpp  ICacheEngine.hpp  TMDBInstance.cc  TMDBInstance.hpp
MetaDataAPI/TMDB/Endpoints/: Movie.hpp  People.hpp  SearchMovie.cc  SearchMovie.hpp  SearchMulti.hpp  SearchTV.cc  SearchTV.hpp  TVEpisode.hpp  TVSeason.cc  TVSeason.hpp  TVSeries.cc  TVSeries.hpp
MetaDataAPI/TMDB/Enums/: Enums.hpp
MetaDataAPI/TMDB/Models/: AggregateCastCredit.cc  AggregateCastCredit.hpp  AggregateCrewCredit.cc  AggregateCrewCredit.hpp  BaseEpisode.cc  BaseEpisode.hpp  Cacheable.hpp  CastCredit.cc  CastCredit.hpp  CollectionDetails.cc  CollectionDetails.hpp  CompanyDetails.cc  CompanyDetails.hpp  Country.cc  Country.hpp  CreditJob.cc  CreditJob.hpp  Credits.cc  Credits.hpp  CrewCredit.cc  CrewCredit.hpp  EpisodeDetails.cc  EpisodeDetails.hpp  EpisodeMediaImages.cc  EpisodeMediaImages.hpp  Genre.cc  Genre.hpp  Image.cc  Image.hpp  Language.cc  Language.hpp  MediaDetails.cc  MediaDetails.hpp  MediaImages.cc  MediaImages.hpp  ModelDefinition.hpp  Movie.cc  Movie.hpp  MovieCastCredit.cc  MovieCastCredit.hpp  (+79 more)
MetaDataAPI/TMDB/RequestParams/: BaseRequestParam.cc  BaseRequestParam.hpp  ListRequestParam.cc  ListRequestParam.hpp  SingleRequestParam.cc  SingleRequestParam.hpp
MetaDataAPI/TMDB/Utils/: Utils.cc  Utils.hpp
Schema/: library.db  library.sqbpro  schem.sqbpro  schema.db
controllers/: Images.cc  Images.h  api_Auth.cc  api_Auth.h  api_Enviroment.cc  api_Enviroment.h  api_Items.cc  api_Items.h  api_Libraries.cc  api_Libraries.h  api_LibraryPaths.cc  api_LibraryPaths.h  api_Stream.cc  api_Stream.h  api_Users.cc  api_Users.h
filters/: AuthFilter.cc
models/: AudioTracks.cc  AudioTracks.h  CreditAssignments.cc  CreditAssignments.h  CreditLocalizations.cc  CreditLocalizations.h  CreditTypes.cc  CreditTypes.h  Credits.cc  Credits.h  EventTypes.cc  EventTypes.h  Events.cc  Events.h  ExternalIds.cc  ExternalIds.h  ExternalMediaItemIds.cc  ExternalMediaItemIds.h  ExternalPeopleIds.cc  ExternalPeopleIds.h  Genders.cc  Genders.h  GenreAssignments.cc  GenreAssignments.h  GenreLocalizations.cc  GenreLocalizations.h  Genres.cc  Genres.h  ImageTypes.cc  ImageTypes.h  Images.cc  Images.h  Languages.cc  Languages.h  Libraries.cc  Libraries.h  LibraryAssignments.cc  LibraryAssignments.h  LibraryPaths.cc  LibraryPaths.h  (+51 more)
test/: CMakeLists.txt
utils/: DBUtils.cc  DBUtils.h  EnumToInt.h  EventUtils.cc  EventUtils.h  JsonUtils.cc  JsonUtils.h  LibrarySettingsManager.cc  LibrarySettingsManager.hpp  Macros.h  MediaEnums.h  MediaItem.h  MediaUtils.cc  MediaUtils.h  MetaData.h  RequestHeaderUtils.cc  RequestHeaderUtils.h  ScheduleUtils.cc  ScheduleUtils.h  ServerSettingsManager.cc  ServerSettingsManager.hpp  SessionUtils.cc  SessionUtils.h  ThreadPool.h  TimeUtils.h  UserSettingsManager.cc  UserSettingsManager.hpp  Utils.cc  Utils.h
